[gd_scene load_steps=13 format=3 uid="uid://70286mk2munl"]

[ext_resource type="Texture2D" uid="uid://dnojohbbp06rg" path="res://Assets/Stage Layers/tileset.png" id="1_xfdvs"]
[ext_resource type="Script" uid="uid://dr0mn8100qras" path="res://Script/camera_2d.gd" id="2_4wuqx"]
[ext_resource type="PackedScene" uid="uid://ppkllmq1o051" path="res://Object/Player.tscn" id="2_jvc7w"]
[ext_resource type="Script" uid="uid://dmn0a1hn5i3bv" path="res://Script/hurt_box.gd" id="3_jvc7w"]
[ext_resource type="Script" uid="uid://dxqxuq7qquk3l" path="res://Script/hit_box.gd" id="5_ppfpo"]
[ext_resource type="Script" uid="uid://bkgl6hcltt42h" path="res://Script/health_bar_ui.gd" id="6_8uxom"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4wuqx"]
texture = ExtResource("1_xfdvs")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
15:2/0 = 0
16:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
16:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
20:7/0 = 0
21:7/0 = 0
23:7/0 = 0
24:7/0 = 0
29:7/0 = 0
30:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
20:8/0 = 0
21:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
29:8/0 = 0
30:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
20:9/0 = 0
21:9/0 = 0
23:9/0 = 0
24:9/0 = 0
26:9/0 = 0
27:9/0 = 0
29:9/0 = 0
30:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
20:10/0 = 0
21:10/0 = 0
23:10/0 = 0
24:10/0 = 0
26:10/0 = 0
27:10/0 = 0
29:10/0 = 0
30:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
20:11/0 = 0
21:11/0 = 0
23:11/0 = 0
24:11/0 = 0
26:11/0 = 0
27:11/0 = 0
29:11/0 = 0
30:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
20:12/0 = 0
21:12/0 = 0
23:12/0 = 0
24:12/0 = 0
26:12/0 = 0
27:12/0 = 0
29:12/0 = 0
30:12/0 = 0
0:14/0 = 0
1:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
0:15/0 = 0
1:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
0:16/0 = 0
1:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
32:16/0 = 0
0:17/0 = 0
1:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
0:18/0 = 0
1:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
32:18/0 = 0
0:19/0 = 0
1:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
32:19/0 = 0
0:20/0 = 0
1:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
0:21/0 = 0
0:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:21/0 = 0
1:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:21/0 = 0
3:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:21/0 = 0
4:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:21/0 = 0
5:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:21/0 = 0
6:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:21/0 = 0
7:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:21/0 = 0
8:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:21/0 = 0
9:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:22/0 = 0
0:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:22/0 = 0
1:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:22/0 = 0
3:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:22/0 = 0
4:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:22/0 = 0
5:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:22/0 = 0
6:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:22/0 = 0
7:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:22/0 = 0
8:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:22/0 = 0
9:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ppfpo"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_4wuqx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wuqx"]
size = Vector2(53, 187)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uxom"]
size = Vector2(60, 204)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8uxom"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jpr5"]
bg_color = Color(1.8770993e-06, 0.5694298, 0.18652505, 1)
border_color = Color(0, 0, 0, 1)

[node name="Level" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ppfpo")
format = 2
layer_0/name = "Foreground"
layer_0/tile_data = PackedInt32Array(524274, 196609, 22, 524275, 262145, 22, 524276, 327681, 22, 524277, 393217, 22, 524278, 458753, 22, 524279, 524289, 22, 524280, 589825, 22, 524281, 196609, 22, 524282, 262145, 22, 524283, 327681, 22, 524284, 393217, 22, 524285, 458753, 22, 524286, 524289, 22, 524287, 589825, 22, 458752, 196609, 22, 458753, 262145, 22, 458754, 327681, 22, 458755, 393217, 22, 458756, 458753, 22, 458757, 524289, 22, 458758, 589825, 22, 458759, 196609, 22, 458760, 262145, 22, 458761, 327681, 22, 458762, 393217, 22, 458763, 458753, 22, 458764, 524289, 22, 458765, 589825, 22, 458738, 196609, 21, 458739, 262145, 21, 458740, 327681, 21, 458741, 393217, 21, 458742, 458753, 21, 458743, 524289, 21, 458744, 589825, 21, 458745, 196609, 21, 458746, 262145, 21, 458747, 327681, 21, 458748, 393217, 21, 458749, 458753, 21, 458750, 524289, 21, 458751, 589825, 21, 393216, 196609, 21, 393217, 262145, 21, 393218, 327681, 21, 393219, 393217, 21, 393220, 458753, 21, 393221, 524289, 21, 393222, 589825, 21, 393223, 196609, 21, 393224, 262145, 21, 393225, 327681, 21, 393226, 393217, 21, 393227, 458753, 21, 393228, 524289, 21, 393229, 589825, 21, 327666, 196609, 20, 393202, 196609, 21, 327667, 262145, 20, 393203, 262145, 21, 327668, 327681, 20, 393204, 327681, 21, 327669, 393217, 20, 393205, 393217, 21, 327670, 458753, 20, 393206, 458753, 21, 327671, 524289, 20, 393207, 524289, 21, 327672, 589825, 20, 393208, 589825, 21, 327673, 196609, 20, 393209, 196609, 21, 327674, 262145, 20, 393210, 262145, 21, 327675, 327681, 20, 393211, 327681, 21, 327676, 393217, 20, 393212, 393217, 21, 327677, 458753, 20, 393213, 458753, 21, 327678, 524289, 20, 393214, 524289, 21, 327679, 589825, 20, 393215, 589825, 21, 262144, 196609, 20, 327680, 196609, 21, 262145, 262145, 20, 327681, 262145, 21, 262146, 327681, 20, 327682, 327681, 21, 262147, 393217, 20, 327683, 393217, 21, 262148, 458753, 20, 327684, 458753, 21, 262149, 524289, 20, 327685, 524289, 21, 262150, 589825, 20, 327686, 589825, 21, 262151, 196609, 20, 327687, 196609, 21, 262152, 262145, 20, 327688, 262145, 21, 262153, 327681, 20, 327689, 327681, 21, 262154, 393217, 20, 327690, 393217, 21, 262155, 458753, 20, 327691, 458753, 21, 262156, 524289, 20, 327692, 524289, 21, 262157, 589825, 20, 327693, 589825, 21, -65550, 196609, 14, -14, 196609, 15, 65522, 196609, 16, 131058, 196609, 17, 196594, 196609, 18, 262130, 196609, 19, -65549, 262145, 14, -13, 262145, 15, 65523, 262145, 16, 131059, 262145, 17, 196595, 262145, 18, 262131, 262145, 19, -65548, 327681, 14, -12, 327681, 15, 65524, 327681, 16, 131060, 327681, 17, 196596, 327681, 18, 262132, 327681, 19, -65547, 393217, 14, -11, 393217, 15, 65525, 393217, 16, 131061, 393217, 17, 196597, 393217, 18, 262133, 393217, 19, -65546, 458753, 14, -10, 458753, 15, 65526, 458753, 16, 131062, 458753, 17, 196598, 458753, 18, 262134, 458753, 19, -65545, 524289, 14, -9, 524289, 15, 65527, 524289, 16, 131063, 524289, 17, 196599, 524289, 18, 262135, 524289, 19, -65544, 589825, 14, -8, 589825, 15, 65528, 589825, 16, 131064, 589825, 17, 196600, 589825, 18, 262136, 589825, 19, -65543, 196609, 14, -7, 196609, 15, 65529, 196609, 16, 131065, 196609, 17, 196601, 196609, 18, 262137, 196609, 19, -65542, 262145, 14, -6, 262145, 15, 65530, 262145, 16, 131066, 262145, 17, 196602, 262145, 18, 262138, 262145, 19, -65541, 327681, 14, -5, 327681, 15, 65531, 327681, 16, 131067, 327681, 17, 196603, 327681, 18, 262139, 327681, 19, -65540, 393217, 14, -4, 393217, 15, 65532, 393217, 16, 131068, 393217, 17, 196604, 393217, 18, 262140, 393217, 19, -65539, 458753, 14, -3, 458753, 15, 65533, 458753, 16, 131069, 458753, 17, 196605, 458753, 18, 262141, 458753, 19, -65538, 524289, 14, -2, 524289, 15, 65534, 524289, 16, 131070, 524289, 17, 196606, 524289, 18, 262142, 524289, 19, -65537, 589825, 14, -1, 589825, 15, 65535, 589825, 16, 131071, 589825, 17, 196607, 589825, 18, 262143, 589825, 19, -131072, 196609, 14, -65536, 196609, 15, 0, 196609, 16, 65536, 196609, 17, 131072, 196609, 18, 196608, 196609, 19, -131071, 262145, 14, -65535, 262145, 15, 1, 262145, 16, 65537, 262145, 17, 131073, 262145, 18, 196609, 262145, 19, -131070, 327681, 14, -65534, 327681, 15, 2, 327681, 16, 65538, 327681, 17, 131074, 327681, 18, 196610, 327681, 19, -131069, 393217, 14, -65533, 393217, 15, 3, 393217, 16, 65539, 393217, 17, 131075, 393217, 18, 196611, 393217, 19, -131068, 458753, 14, -65532, 458753, 15, 4, 458753, 16, 65540, 458753, 17, 131076, 458753, 18, 196612, 458753, 19, -131067, 524289, 14, -65531, 524289, 15, 5, 524289, 16, 65541, 524289, 17, 131077, 524289, 18, 196613, 524289, 19, -131066, 589825, 14, -65530, 589825, 15, 6, 589825, 16, 65542, 589825, 17, 131078, 589825, 18, 196614, 589825, 19, -131065, 196609, 14, -65529, 196609, 15, 7, 196609, 16, 65543, 196609, 17, 131079, 196609, 18, 196615, 196609, 19, -131064, 262145, 14, -65528, 262145, 15, 8, 262145, 16, 65544, 262145, 17, 131080, 262145, 18, 196616, 262145, 19, -131063, 327681, 14, -65527, 327681, 15, 9, 327681, 16, 65545, 327681, 17, 131081, 327681, 18, 196617, 327681, 19, -131062, 393217, 14, -65526, 393217, 15, 10, 393217, 16, 65546, 393217, 17, 131082, 393217, 18, 196618, 393217, 19, -131061, 458753, 14, -65525, 458753, 15, 11, 458753, 16, 65547, 458753, 17, 131083, 458753, 18, 196619, 458753, 19, -131060, 524289, 14, -65524, 524289, 15, 12, 524289, 16, 65548, 524289, 17, 131084, 524289, 18, 196620, 524289, 19, -131059, 589825, 14, -65523, 589825, 15, 13, 589825, 16, 65549, 589825, 17, 131085, 589825, 18, 196621, 589825, 19, -458766, 262145, 7, -393230, 262145, 8, -327694, 262145, 9, -262158, 262145, 10, -196622, 262145, 11, -131086, 262145, 12, -458765, 327681, 7, -393229, 327681, 8, -327693, 327681, 9, -262157, 327681, 10, -196621, 327681, 11, -131085, 327681, 12, -458764, 393217, 7, -393228, 393217, 8, -327692, 393217, 9, -262156, 393217, 10, -196620, 393217, 11, -131084, 393217, 12, -458763, 262145, 7, -393227, 262145, 8, -327691, 262145, 9, -262155, 262145, 10, -196619, 262145, 11, -131083, 262145, 12, -458762, 327681, 7, -393226, 327681, 8, -327690, 327681, 9, -262154, 327681, 10, -196618, 327681, 11, -131082, 327681, 12, -458761, 393217, 7, -393225, 393217, 8, -327689, 393217, 9, -262153, 393217, 10, -196617, 393217, 11, -131081, 393217, 12, -458760, 262145, 7, -393224, 262145, 8, -327688, 262145, 9, -262152, 262145, 10, -196616, 262145, 11, -131080, 262145, 12, -458759, 327681, 7, -393223, 327681, 8, -327687, 327681, 9, -262151, 327681, 10, -196615, 327681, 11, -131079, 327681, 12, -458758, 393217, 7, -393222, 393217, 8, -327686, 393217, 9, -262150, 393217, 10, -196614, 393217, 11, -131078, 393217, 12, -458757, 262145, 7, -393221, 262145, 8, -327685, 262145, 9, -262149, 262145, 10, -196613, 262145, 11, -131077, 262145, 12, -458756, 327681, 7, -393220, 327681, 8, -327684, 327681, 9, -262148, 327681, 10, -196612, 327681, 11, -131076, 327681, 12, -458755, 393217, 7, -393219, 393217, 8, -327683, 393217, 9, -262147, 393217, 10, -196611, 393217, 11, -131075, 393217, 12, -458754, 262145, 7, -393218, 262145, 8, -327682, 262145, 9, -262146, 262145, 10, -196610, 262145, 11, -131074, 262145, 12, -458753, 327681, 7, -393217, 327681, 8, -327681, 327681, 9, -262145, 327681, 10, -196609, 327681, 11, -131073, 327681, 12, -524288, 393217, 7, -458752, 393217, 8, -393216, 393217, 9, -327680, 393217, 10, -262144, 393217, 11, -196608, 393217, 12, -524287, 262145, 7, -458751, 262145, 8, -393215, 262145, 9, -327679, 262145, 10, -262143, 262145, 11, -196607, 262145, 12, -524286, 327681, 7, -458750, 327681, 8, -393214, 327681, 9, -327678, 327681, 10, -262142, 327681, 11, -196606, 327681, 12, -524285, 393217, 7, -458749, 393217, 8, -393213, 393217, 9, -327677, 393217, 10, -262141, 393217, 11, -196605, 393217, 12, -524284, 262145, 7, -458748, 262145, 8, -393212, 262145, 9, -327676, 262145, 10, -262140, 262145, 11, -196604, 262145, 12, -524283, 327681, 7, -458747, 327681, 8, -393211, 327681, 9, -327675, 327681, 10, -262139, 327681, 11, -196603, 327681, 12, -524282, 393217, 7, -458746, 393217, 8, -393210, 393217, 9, -327674, 393217, 10, -262138, 393217, 11, -196602, 393217, 12, -524281, 262145, 7, -458745, 262145, 8, -393209, 262145, 9, -327673, 262145, 10, -262137, 262145, 11, -196601, 262145, 12, -524280, 327681, 7, -458744, 327681, 8, -393208, 327681, 9, -327672, 327681, 10, -262136, 327681, 11, -196600, 327681, 12, -524279, 393217, 7, -458743, 393217, 8, -393207, 393217, 9, -327671, 393217, 10, -262135, 393217, 11, -196599, 393217, 12, -524278, 262145, 7, -458742, 262145, 8, -393206, 262145, 9, -327670, 262145, 10, -262134, 262145, 11, -196598, 262145, 12, -524277, 327681, 7, -458741, 327681, 8, -393205, 327681, 9, -327669, 327681, 10, -262133, 327681, 11, -196597, 327681, 12, -524276, 393217, 7, -458740, 393217, 8, -393204, 393217, 9, -327668, 393217, 10, -262132, 393217, 11, -196596, 393217, 12, -524275, 262145, 7, -458739, 262145, 8, -393203, 262145, 9, -327667, 262145, 10, -262131, 262145, 11, -196595, 262145, 12)
layer_1/name = "Background"
layer_1/z_index = -2
layer_2/name = "PropsL"
layer_2/z_index = 1
layer_3/name = "Backdrop"
layer_3/z_index = -2

[node name="Camera2D" type="Camera2D" parent="." groups=["Camera"]]
zoom = Vector2(3, 3)
script = ExtResource("2_4wuqx")

[node name="Player" parent="." instance=ExtResource("2_jvc7w")]

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("3_jvc7w")
metadata/_custom_type_script = "uid://dmn0a1hn5i3bv"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(74.5, 32.5)
shape = SubResource("RectangleShape2D_4wuqx")
debug_color = Color(0.051525198, 0, 0.80549514, 0.41960785)

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("5_ppfpo")
metadata/_custom_type_script = "uid://dxqxuq7qquk3l"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-100, 19)
shape = SubResource("RectangleShape2D_8uxom")
debug_color = Color(0.97491735, 0.1603266, 0, 0.41960785)

[node name="UI" type="CanvasLayer" parent="."]
layer = 3

[node name="HealthUI" type="Control" parent="UI"]
top_level = true
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_left = 27.0
offset_top = 16.0
offset_right = 350.0
offset_bottom = 56.0
scale = Vector2(2, 2)
pivot_offset = Vector2(12, 12)
script = ExtResource("6_8uxom")
player_path = NodePath("../../Player")

[node name="HealthBar" type="ProgressBar" parent="UI/HealthUI"]
top_level = true
z_index = 5
layout_mode = 0
offset_left = 15.0
offset_top = 8.0
offset_right = 337.0
offset_bottom = 42.5
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_8uxom")
theme_override_styles/fill = SubResource("StyleBoxFlat_1jpr5")
show_percentage = false

[node name="GameOverLabel" type="Label" parent="UI/HealthUI"]
visible = false
z_index = 5
layout_mode = 0
offset_left = 248.5
offset_top = 165.0
offset_right = 385.5
offset_bottom = 214.0
text = "Game Over!!
Press R to Restart"
horizontal_alignment = 1
vertical_alignment = 1
